--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -1,11 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 
-<html>
+<html lang="zh-cn">
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+
+        <!--link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/bootstrap.min.css') }}-->
         <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/style.css') }}>
-        <title>Online Judge System</title>
+
+        <!--[if lt IE 9]>
+        <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
     <body>
         <div id = "wrapper">
@@ -47,5 +54,7 @@
                 Anything About Problems, Please Feel Free to Contact <a href = "mailto:yueming412@gmail.com">Me</a>
             </div>
         </div>
+        <!--script src={{ url_for('static', filename='js/jquery-1.9.1.min.js') }}></script-->
+        <!--script src={{ url_for('static', filename='js/bootstrap.min.js') }}></script-->
     </body>
 </html>
