--- a/appfile/templates/submit.html
+++ b/appfile/templates/submit.html
@@ -1,9 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
 <title>Submit Your Solution</title>
+<center><h3 class="blue"> Submit Your Solution </h3></center>
+    {% with message = get_flashed_messages() %}
+    {% if message %}
+        <h3 class="center red"> {{ message[0] }} </h3>
+    {% endif %}
+    {% endwith %}
 <form action={{ url_for('submit_problem', pid = pid) }} method="POST">
+    {{ form.csrf_token }}
     <div class="center">
-        <h3 class="blue"> Submit Your Solution </h3>
         Problem ID: {{ form.pid.data }} <br />
         Language: {{ form.language }}<br />
         Source Code<br />
