--- a/appfile/templates/showcode.html
+++ b/appfile/templates/showcode.html
@@ -35,7 +35,7 @@
             {% else %}
                 {% set lan = 'cpp' %}
             {% endif %}
-            <font color=#333399 size=5>Source Code</font>
+            <font color='#333399' size='5'>Source Code</font>
             <pre class="brush: {{ lan }}"> {{ submit.src }} </pre>
             <script type="text/javascript">SyntaxHighlighter.all()</script>
         </div>
