--- a/appfile/templates/register.html
+++ b/appfile/templates/register.html
@@ -12,8 +12,8 @@
         {{ form.csrf_token }}
         <table id = "register">
             <tr>
-                <td>{{ form.userID.label }}</td>
-                <td>{{ form.userID(size = 20) }}</td>
+                <td>{{ form.userid.label }}</td>
+                <td>{{ form.userid(size = 20) }}</td>
             </tr>
             <tr>
                 <td>{{ form.nickname.label }}</td>
