--- a/appfile/templates/userinfo.html
+++ b/appfile/templates/userinfo.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block content %}
-<title> User--{{ user.userID }} </title>
+<title> User--{{ user.userid }} </title>
 <div id="wrapper2" class="center">
     <h4 class="green"> {{ user.nickname }} </h4>
     <table class="center" style="background-color:#D7EBFF">
