--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -20,7 +20,7 @@
     </tr>
     {% for problem in problem_list.items %}
             <tr style={{ loop.cycle('',"background-color:#D7EBFF") }}>
-                <td> {{ problem.pid + 1000 }} </td>
+                <td> {{ problem.pid }} </td>
                 <td align="left"> {{ problem.title }} </td>
                 <td><a href={{ url_for('admin_edit_problem', pid=problem.pid) }}> [Edit] </a></td>
                 {% if problem.visable %}
