--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -23,7 +23,7 @@
 
             <div id = "profile">
                 {% if g.user.is_authenticated() %}
-                    <a href={{ g.url }}> {{ g.user.userID }}</a>
+                    <a href={{ g.url }}> {{ g.user.userid }}</a>
                     {% if g.user.is_admin %}
                         <a href="/admin/" id="admin" color="red"> Admin </a>
                     {% endif %}
