--- a/appfile/templates/problemstatus.html
+++ b/appfile/templates/problemstatus.html
@@ -16,7 +16,7 @@
         {% for solution in solution_list.items %}
         <tr style="{{ loop.cycle('', 'background-color:#D7EBFF') }}">
             <td> {{ MAX_SUBMIT_NUM_ONE_PAGE * (page - 1) + solution_list.items.index(solution) + 1 }} </td>
-            <td><a href={{ url_for('userinfo', userID = solution.userid) }} target="_blank"> {{ solution.userid }} </a></td>
+            <td><a href={{ url_for('userinfo', userid = solution.userid) }} target="_blank"> {{ solution.userid }} </a></td>
             <td> {{ solution.memory_used }} K </td>
             <td> {{ solution.time_used }} MS </td>
             <td><a href={{ url_for('viewcode', runid = solution.runid) }} target="_blank"> {{ solution.language }} </a></td>
