--- a/appfile/templates/index.html
+++ b/appfile/templates/index.html
@@ -1,8 +1,15 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="wrapper2">
-    <h2 class="center blue"> Introduction </h2>
-    <hr />
-    <h3 class="center"> An open source project from Yomin <a href="https://github.com/RominYue/OnlineJudgeSystem"> link </a></h3>
-+</div>
+<title>Home Page</title>
+<div class="container">
+
+    <div class="jumbotron">
+        <h1>Welcome to XOJ Online Judge System</h1>
+        <p>XOJ is a platform that can judge the source code.</p>
+        <p>
+            Now we support for <font style="color: red">C,C++,Python</font>
+        </p>
+        <a href="/" class="btn btn-primary">Learn More</a>
+    </div>
+</div>
 {% endblock %}
