--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="zh-cn">
     <head>
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <!--link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/bootstrap.min.css') }}-->
+        <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/bootstrap.min.css') }}>
         <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/style.css') }}>
 
         <!--[if lt IE 9]>
@@ -15,46 +14,65 @@
         <![endif]-->
     </head>
     <body>
-        <div id = "wrapper">
+        <div class="container">
+            <nav class="navbar navbar-inverse" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href={{ url_for('index')}}>XOJ</a>
+                </div>
 
-            <div id = "head">
-                <h1 class = "title">Welcome to Online Judge System</h1>
-            </div>
-
-            <div id = "profile">
-                {% if g.user.is_authenticated() %}
-                    <a href={{ g.url }}> {{ g.user.userid }}</a>
-                    {% if g.user.is_admin %}
-                        <a href="/admin/" id="admin" color="red"> Admin </a>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li><a href="/">Home</a></li>
+                        <li><a href="/discuss/">Web board</a></li>
+                        <li><a href="/problemset/">Problemset</a></li>
+                        <li><a href="/status/">Status</a></li>
+                        <li><a href="/ranklist/">Ranklist</a></li>
+                        <li><a href="/">Contest</a></li>
+                        <li><a href="/FAQ/">F.A.Qs</a></li>
+                    </ul>
+                    {% if g.user.is_authenticated() %}
+                        <ul class="nav navbar-nav navbar-right">
+                            <li><a href={{ g.url }}>{{ g.user.userid }}</a></li>
+                            {% if g.user.is_admin %}
+                                <li><a href="/admin/">Admin</a></li>
+                            {% endif %}
+                            <li><a href="/logout/">Logout</a></li>
+                        </ul>
+                    {% else %}
+                    <div class="navbar-form navbar-right">
+                            <a href="/login/" class="btn btn-primary">Sign in</a>
+                            <a href="/register/" class="btn btn-default">Sign up</a>
+                    </div>
                     {% endif %}
-                    <a href="/logout/"> Logout </a>
-                {% else %}
-                    <a href = "/login/"> Login </a>
-                    <a href = "/register/"> Register </a>
-                {% endif %}
-            </div>
-
-            <div>
-                <table id = "navbar">
-                    <td><a href = "/"> Home </a></td>
-                    <td><a href="/discuss/"> Web Board </a></td>
-                    <td><a href = "/problemset/"> Problemset </a></td>
-                    <td><a href = "/status/"> Status </a></td>
-                    <td><a href = "/ranklist/"> Ranklist </a></td>
-                    <td><a href = "/"> Contest </a></td>
-                    <td><a href = "/FAQ/"> F.A.Qs </a></td>
-                </table>
-            </div>
-
-            {% block content %}
-            {% endblock %}
-
-            <div id = "contact">
-                <p>OnlineJudge From Yomin</p>
-                Anything About Problems, Please Feel Free to Contact <a href = "mailto:yueming412@gmail.com">Me</a>
-            </div>
+                </div>
+            </nav>
         </div>
-        <!--script src={{ url_for('static', filename='js/jquery-1.9.1.min.js') }}></script-->
-        <!--script src={{ url_for('static', filename='js/bootstrap.min.js') }}></script-->
+
+        {% block content %}
+        {% endblock %}
+
+        <div class="container">
+            <footer>
+                <hr>
+                <p class="text-center">
+                    This Online Judge project is from yomin. You can take
+                    <a href="http://github/Rominyue">Project Home Page</a>
+                    on Github.
+                </p>
+                <p class="text-center">
+                    If you have any questions, feel free to contact
+                    <a href="mailto:someone@example.com">yueming412@gmail.com</a>
+                </p>
+                <p class="text-center">Copyright © 2014 XOJ</p>
+            </footer>
+        </div>
+        <script src={{ url_for('static', filename='js/jquery-1.9.1.min.js') }}></script>
+        <script src={{ url_for('static', filename='js/bootstrap.min.js') }}></script>
     </body>
 </html>
