--- a/appfile/templates/base.html
+++ b/appfile/templates/base.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
+        <link rel="icon" href={{ url_for('static',filename='/image/favicon.ico') }} type="image/x-icon">
         <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/bootstrap.min.css') }}>
         <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/style.css') }}>
 
