--- a/appfile/templates/admin_base.html
+++ b/appfile/templates/admin_base.html
@@ -1,45 +1,81 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"
-"http://www.w3.org/TR/html4/loose.dtd">
+<!DOCTYPE html>
 <html>
     <head>
-        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="icon" href={{ url_for('static',filename='/image/favicon.ico') }} type="image/x-icon">
+        <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/bootstrap.min.css') }}>
         <link rel="stylesheet" type="text/css" href={{ url_for('static', filename='css/style.css') }}>
-        <title> Online Judge From Yomin / Admin </title>
+
+        <!--[if lt IE 9]>
+        <script src="http://cdn.bootcss.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+        <script src="http://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
+        <![endif]-->
     </head>
-    <div id="wrapper">
+    <body>
+        <div class="container">
+            <nav class="navbar navbar-inverse" role="navigation">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href={{ url_for('admin')}}>Admin</a>
+                </div>
 
-        <div id="head">
-            <h1 class="title"> Admin </h1>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                    <ul class="nav navbar-nav">
+                        <li>
+                            <a href={{ url_for('admin_addproblem') }}>AddProblem</a>
+                        </li>
+                        <li>
+                            <a href="/admin/">Contest</a>
+                        </li>
+                    </ul>
+                    {% if g.user.is_authenticated() %}
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href={{ g.url }}>{{ g.user.userid }}</a>
+                        </li>
+                        <li>
+                            <a href="/">Home</a>
+                        </li>
+                        <li>
+                            <a href="/logout/">Logout</a>
+                        </li>
+                    </ul>
+                    {% else %}
+                    <div class="navbar-form navbar-right">
+                        <a href="/login/" class="btn btn-primary">Sign in</a>
+                        <a href="/register/" class="btn btn-default">Sign up</a>
+                    </div>
+                    {% endif %}
+                </div>
+            </nav>
         </div>
 
-        <div id="profile">
-            {% if g.user.is_authenticated() %}
-                <a href={{ g.url }}> {{ g.user.userid }} </a>
-                <a href="/logout/"> Logout </a>
-                <a href='/' id="admin"> Home </a>
-            {% else %}
-                <a href="/login/"> Login </a>
-                <a href="/register/"> Register </a>
-            {% endif %}
-        </div>
+        {% block content %}
+        {% endblock %}
 
-        <div>
-            <table id="navbar"><tr>
-                <td><a href="/admin/"> Admin Page </a></td>
-                <td><a href="/admin/problemset/"> Problemset </a></td>
-                <td><a href="/admin/"> Contest </a></td>
-            </table></tr>
+        <div class="container">
+            <footer>
+                <hr>
+                <p class="text-center">
+                    This Online Judge project is from yomin. You can take
+                    <a href="http://github/Rominyue">Project Home Page</a>
+                    on Github.
+                </p>
+                <p class="text-center">
+                    If you have any questions, feel free to contact
+                    <a href="mailto:someone@example.com">yueming412@gmail.com</a>
+                </p>
+                <p class="text-center">Copyright © 2014 XOJ</p>
+            </footer>
         </div>
-
-        <div id="wrapper2">
-            {% block content %}
-            {% endblock %}
-        </div>
-
-        <div id="contact">
-            <hr />
-            OnlineJudge From Yomin<br \>
-            Anything about the Problems, Please Contact <a href="mailto:yueming412t@gmail.com"> Me </a>
-        </div>
-    </div>
+        <script src={{ url_for('static', filename='js/jquery-1.9.1.min.js') }}></script>
+        <script src={{ url_for('static', filename='js/bootstrap.min.js') }}></script>
+    </body>
 </html>
