--- a/appfile/templates/admin_problemset.html
+++ b/appfile/templates/admin_problemset.html
@@ -1,34 +1,51 @@
 {% extends "admin_base.html" %}
 {% block content %}
-<center><a href={{ url_for('admin_addproblem') }}> Add Problem </a></center>
-<center>
-    {% for i in problem_list.iter_pages() %}
-        {% if i == page %}
-            {{ i }}
-        {% else %}
-            <a href={{ url_for('admin_problemset', page=i) }}> {{ i }} </a>
-        {% endif %}
-    {% endfor %}
-</center>
-
-<table id = "problemset">
-    <tr>
-        <th id="ps_pid"> Problem ID </th>
-        <th id="ps_title"> Title </th>
-        <th id="ps_ac"> Edit </th>
-        <th id="ps_submit"> Hide </th>
-    </tr>
-    {% for problem in problem_list.items %}
-            <tr style={{ loop.cycle('',"background-color:#D7EBFF") }}>
-                <td> {{ problem.pid }} </td>
-                <td align="left"> {{ problem.title }} </td>
-                <td><a href={{ url_for('admin_edit_problem', pid=problem.pid) }}> [Edit] </a></td>
+<br><br>
+<div class="container">
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr class="info">
+                <th id="ps_pid">Problem ID</th>
+                <th id="ps_title">Title</th>
+                <th id="ps_ac">Edit</th>
+                <th id="ps_submit">Hide</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for problem in problem_list.items %}
+            <tr>
+                <td>{{ problem.pid }}</td>
+                <td align="left">{{ problem.title }}</td>
+                <td>
+                    <a href={{ url_for('admin_edit_problem', pid=problem.pid) }} class="btn btn-primary btn-sm"> Edit </a>
+                </td>
                 {% if problem.visable %}
-                    <td><a href={{ url_for('admin_hide_problem', pid = problem.pid) }}> [Hide] </a></td>
+                <td>
+                    <a href={{ url_for('admin_hide_problem', pid = problem.pid) }} class="btn btn-primary btn-sm"> Hide </a>
+                </td>
                 {% else %}
-                    <td><a href={{ url_for('admin_display_problem',pid = problem.pid) }}> [Display] </a></td>
+                <td>
+                    <a href={{ url_for('admin_display_problem',pid = problem.pid) }} class="btn btn-primary btn-sm"> Display </a>
+                </td>
                 {% endif %}
             </tr>
-    {% endfor %}
-</table>
+            {% endfor %}
+        </tbody>
+    </table>
+    <ul class="pager">
+        <li>
+            <a href={{ url_for('admin_problemset') }}>Top</a>
+        </li>
+        {% if problem_list.has_prev %}
+        <li>
+            <a href={{ url_for('admin_problemset', page = problem_list.prev_num) }}>&larr; Previous</a>
+        </li>
+        {% endif %}
+        {% if problem_list.has_next %}
+        <li>
+            <a href={{ url_for('admin_problemset', page = problem_list.next_num) }}>Next &rarr;</a>
+        </li>
+        {% endif %}
+    </ul>
+</div>
 {% endblock %}
