--- a/appfile/templates/ranklist.html
+++ b/appfile/templates/ranklist.html
@@ -1,31 +1,48 @@
 {% extends "base.html" %}
 {% block content %}
 <title> Ranklist </title>
-<center><h3>Ranklist</h3></center>
-<table id="list">
-    <tr>
-        <th id="ps_is_ac"> No. </th>
-        <th id="ps_pid"> User ID </th>
-        <th id="ps_title" style="text-align:center"> NickName </th>
-        <th id="ps_ac"> AC </th>
-        <th id="ps_submit"> Submit </th>
-    </tr>
-    {% for user in user_list.items %}
-        <tr style="{{ loop.cycle('', 'background-color:#D7EBFF') }}">
-            <td> {{ USER_NUM_ONE_PAGE * (page - 1) + user_list.items.index(user) + 1 }} </td>
-            <td><a href={{ url_for('userinfo', userid = user.userID) }}> {{ user.userid }} </a></td>
-            <td> {{ user.nickname }} </td>
-            <td> {{ user.ac_count }} </td>
-            <td> {{ user.submit_count }} </td>
-        </tr>
-    {% endfor %}
-</table>
-<div class="center">
-{% if user_list.has_prev %}
-    <a href={{ url_for('show_ranklist', page = user_list.prev_num) }}> [Previous Page]</a>
-{% endif %}
-{% if user_list.has_next %}
-    <a href={{ url_for('show_ranklist', page = user_list.next_num) }}> [Next Page] </a>
-{% endif %}
+<div class="container">
+    <center><h3>Ranklist</h3></center>
+    <table class="table table-striped table-hover">
+        <thead>
+            <tr class="info">
+                <th id="ps_is_ac">No.</th>
+                <th id="ps_pid">User ID</th>
+                <th id="ps_title" style="text-align:center">NickName</th>
+                <th id="ps_ac">AC</th>
+                <th id="ps_submit">Submit</th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for user in user_list.items %}
+            <tr>
+                <td>
+                    {{ USER_NUM_ONE_PAGE * (page - 1) + user_list.items.index(user) + 1 }}
+                </td>
+                <td>
+                    <a href={{ url_for('userinfo', userid = user.userid) }}>{{ user.userid }}</a>
+                </td>
+                <td style="text-align:center">{{ user.nickname }}</td>
+                <td>{{ user.ac_count }}</td>
+                <td>{{ user.submit_count }}</td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+    <ul class="pager">
+        <li>
+            <a href={{ url_for('show_ranklist') }}>Top</a>
+        </li>
+        {% if user_list.has_prev %}
+        <li>
+            <a href={{ url_for('show_ranklist', page = user_list.prev_num) }}>&larr; Previous</a>
+        </li>
+        {% endif %}
+            {% if user_list.has_next %}
+        <li>
+            <a href={{ url_for('show_ranklist', page = user_list.next_num) }}>Next &rarr;</a>
+        </li>
+        {% endif %}
+    </ul>
 </div>
 {% endblock %}
