--- a/appfile/templates/showproblem.html
+++ b/appfile/templates/showproblem.html
@@ -1,19 +1,19 @@
 {% extends "base.html" %}
 {% block content %}
-<div id="problem">
-     <center><span style="font-size:29px; font-weight:bold; color:blue"> {{ problem.title }} </span></center>
-     <table>
-         <tr>
-             <td><b>Time Limit:</b> {{ problem.time_limit }} MS </td>
-             <td width="10px"></td>
-             <td><b>Memory Limit:</b> {{ problem.memory_limit}} K </td>
-         </tr>
-         <tr>
-             <td><b> Total Submissions: </b> {{ problem.submit_count }} </td>
-             <td width="10px"></td>
-             <td><b> Accepted: </b> {{ problem.ac_count }} </td>
-         </tr>
-     </table>
+<div class="container" id="problem">
+    <center><span style="font-size:29px; font-weight:bold; color:blue"> {{ problem.title }} </span></center>
+    <table>
+        <tr>
+            <td><b>Time Limit:</b> {{ problem.time_limit }} MS </td>
+            <td width="20px"></td>
+            <td><b>Memory Limit:</b> {{ problem.memory_limit}} K </td>
+        </tr>
+        <tr>
+            <td><b> Total Submissions: </b> {{ problem.submit_count }} </td>
+            <td width="20px"></td>
+            <td><b> Accepted: </b> {{ problem.ac_count }} </td>
+        </tr>
+    </table>
     <h2> Description </h2>
     <div>
         {% autoescape false %}
@@ -50,10 +50,16 @@
         {{ problem.hint }}
         {% endautoescape %}
     </div>
+    <ul class="pager">
+        <li>
+            <a href={{ url_for('submit_problem', pid = problem.pid) }}> Submit </a>
+        </li>
+        <li>
+            <a href={{ url_for('problemstatus', pid = problem.pid) }}> Status </a>
+        </li>
+        <li>
+            <a href={{ url_for('discuss', pid = problem.pid) }}> Discuss </a>
+        </li>
+    </ul>
 </div>
-<center>
-    <a href={{ url_for('submit_problem', pid = problem.pid) }}> Submit </a>
-    <a href={{ url_for('problemstatus', pid = problem.pid) }}> Status </a>
-    <a href={{ url_for('discuss', pid = problem.pid) }}> Discuss </a>
-</center>
 {% endblock %}
